# roboto-python-sdk

./: .gitignore  .roboto-python-sdk-ignore  BUILD  BUILD.pants  CHANGELOG.md  README.md  RELEASE_NOTES.md  agent_entrypoint.py  cli_entrypoint.py  pants.toml  pyproject.toml  roboto-agent-lift.toml  roboto-cli-lift.toml
.github/workflows/: build-cli.yml  cli.yml  sdk.yml
.serena/: project.yml
build-support/: BUILD
build-support/lockfiles/: constraints.txt
build-support/pex_platforms/: BUILD.pants  linux_py310_aarch64.json  linux_py310_x86_64.json  linux_py313_aarch64.json  linux_py313_x86_64.json  macos_py310_aarch64.json  macos_py310_x86_64.json  macos_py313_aarch64.json  macos_py313_x86_64.json
build-support/requirements/tools/: pyproject.toml
examples/: BUILD  README.md  agent_session_client_tools.py  agent_thread_client_tools.py  analyze-1000-px4-flights.ipynb  analyze-px4-topic-data.ipynb  fetch-topic-data.ipynb  match_visualization_utils.py  similarity-search.ipynb
examples/notebook_utils/: match_results.py  px4_results.py
src/roboto/: BUILD  __init__.py  _mcap_ros2_perf_patch.py  api_version.py  association.py  collection_utils.py  config.py  env.py  logging.py  paths.py  principal.py  progress.py  regionalization.py  roboto_search.py  sentinels.py  time.py  types.py  updates.py  version.py  waiters.py  warnings.py
src/roboto.egg-info/: PKG-INFO  SOURCES.txt
src/roboto/action_runtime/: __init__.py  action_input.py  action_runtime.py  exceptions.py  exit_codes.py  file_changeset.py  invocation_context.py  prepare.py
src/roboto/action_runtime/action_input/: __init__.py  action_input.py  file_resolver.py  input_resolver.py  topic_resolver.py
src/roboto/ai/: __init__.py  record.py  summary.py
src/roboto/ai/agent/: __init__.py  agent.py  record.py  resolver.py
src/roboto/ai/agent_session/: __init__.py  agent_session.py  client_tool.py  event.py  feedback.py  record.py
src/roboto/ai/agent_thread/: __init__.py  agent_thread.py  agent_thread_goal_view.py  feedback.py  record.py
src/roboto/ai/chat/: __init__.py  chat.py  event.py  record.py
src/roboto/ai/core/: __init__.py  content.py  context.py  event.py  record.py  task.py
src/roboto/ai/goals/: __init__.py  achieve_inputs.py  results.py  types.py
src/roboto/ai/mcp/: __init__.py  operations.py  record.py
src/roboto/analytics/: __init__.py
src/roboto/analytics/signal_similarity/: __init__.py  match.py  signal_similarity.py
src/roboto/auth/: __init__.py  fga.py  permissions.py  scope.py
src/roboto/cli/: __init__.py  argparse.py  config.py  context.py  devices.py  entry.py  terminal.py  validation.py
src/roboto/cli/actions/: action_config.py  commands.py  create.py  delete.py  init.py  invoke.py  list_invocations.py  search.py  show.py  update.py
src/roboto/cli/cache/: __init__.py  clear.py  commands.py  size.py  where.py
src/roboto/cli/chat/: __init__.py  start.py
src/roboto/cli/collections/: __init__.py  changes.py  create.py  delete.py  list.py  list_all.py  shared_helpdoc.py  show.py  update.py
src/roboto/cli/command/: __init__.py  args.py  model.py  roboto_command.py
src/roboto/cli/common_args/: __init__.py  actions.py  orgs.py
src/roboto/cli/datasets/: commands.py  create.py  delete_dataset.py  delete_files.py  download_files.py  import_external_file.py  list_files.py  search.py  shared_helpdoc.py  show.py  update.py  upload_files.py
src/roboto/cli/extension/: __init__.py  cli_extension.py
src/roboto/cli/images/: __init__.py  commands.py  delete_image.py  delete_repo.py  list_images.py  list_repos.py  login.py  pull.py  push.py
src/roboto/cli/invocations/: __init__.py  cancel.py  cancel_all.py  logs.py  show.py  status.py
src/roboto/cli/orgs/: commands.py
src/roboto/cli/secrets/: __init__.py  delete.py  list.py  read.py  write.py
src/roboto/cli/tokens/: commands.py
src/roboto/cli/triggers/: commands.py
src/roboto/cli/users/: __init__.py  commands.py
src/roboto/compat/: __init__.py  _optional.py  _strenum.py
src/roboto/domain/: __init__.py
src/roboto/domain/actions/: __init__.py  action.py  action_config.py  action_operations.py  action_record.py  invocation.py  invocation_operations.py  invocation_record.py  scheduled_trigger.py  scheduled_trigger_operations.py  scheduled_trigger_record.py  stats.py  trigger.py  (+3 more)
src/roboto/exceptions/: __init__.py  domain.py  http.py  ingestion.py
src/roboto/experimental/: __init__.py  representation_record.py
src/roboto/file_infra/: __init__.py  file_service.py  upload_transaction.py
src/roboto/formats/: __init__.py  fields.py
src/roboto/fs/: __init__.py  api_operations.py  download_session.py  file_service.py  upload_transaction.py
src/roboto/http/: __init__.py  constants.py  headers.py  http_client.py  request.py  request_decorators.py  requester.py  response.py  retry.py  roboto_client.py  testing_util.py  url_builder.py
src/roboto/image_registry/: __init__.py  http_resources.py  image_registry.py  record.py
src/roboto/notifications/: __init__.py  http_client.py  http_resources.py  record.py  validator.py
src/roboto/pydantic/: __init__.py  serializers.py  validators.py
src/roboto/query/: __init__.py  api.py  client.py  conditions.py  precanned.py  query.py  roboto_search.py  specification.py  visitor.py
src/roboto/serde/: __init__.py  arrays.py  dicts.py  paths.py
src/roboto/storage/: __init__.py  cache.py  credentials.py  download_session.py  http_range_reader.py  sparse_buffer.py
src/roboto/testing/: __init__.py  fake_http_response_factory.py  stub_roboto_client.py
src/roboto/upload_agent/: __init__.py  __main__.py  agent.py  exceptions.py  files.py
src/roboto/version/: __init__.py  autogen_version.py
test/: test_query.py  test_sentinels.py  test_serde.py  test_updates.py
test/cli/common_args/: test_action_parameter_parsing.py
test/domain/actions/: test_invocation.py  test_invocation_record.py
test/http/: test_http_client.py  test_pagination_token.py  test_retry_policy.py
test/image_registry/: test_container_credentials.py
test/pydantic/: test_validators.py
(+130 files in other folders)
