[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboto"
dependencies = [
    "boto3~=1.26",
    "botocore~=1.29",
    "cookiecutter~=2.5.0",
    "filelock~=3.15",
    "mcap~=1.1.1",
    "mcap-ros1-support~=0.7.1",
    "mcap-ros2-support~=0.5.3",
    "packaging~=24.0",
    "pathspec~=0.11",
    "pydantic~=2.5",
    "pydantic-core~=2.14",
    "pydantic-settings~=2.1",
    "tenacity~=8.2",
    "tqdm~=4.65",
    "typing-extensions ~= 4.8 ; python_version<'3.10'",
]
description = "Official Python toolkit for roboto.ai"
dynamic = ["version"]
license = { file = "LICENSE" }
maintainers = [
  { name = "Roboto AI", email = "info@roboto.ai" },
]
readme = "README.md"
requires-python = ">=3.9,<4"


[project.optional-dependencies]
analytics = [
    "numpy>=1.19",
    "pandas>=2.0",
    "stumpy>=1.13",
]

examples = [
    "ipython~=8.28",
    "jupyter~=1.1",
    "matplotlib~=3.9",
    "pillow~=10.4",
]

[project.scripts]
roboto = "roboto.cli:entry"

[project.urls]
Documentation = "https://docs.roboto.ai"
Homepage = "https://www.roboto.ai"
Issues = "https://github.com/roboto-ai/roboto-python-sdk/issues"
Repository = "https://github.com/roboto-ai/roboto-python-sdk.git"

[tool.setuptools.dynamic]
version = {attr = "roboto.version.__version__"}