[project]
name = "roboto_platform_tools"
dependencies = [
    "ruff>=0.8.0",
    "mypy==1.15",
    "pytest~=7.3",
    "pytest-cov~=4.1",
    "pytest-xdist~=3.3",
    "PyGithub~=2.6.1",
    "testcontainers[postgres]>=4.13.0",
]

[project.optional-dependencies]
sdk_examples = [
    "ipython~=8.28",
    "jupyter~=1.1",
    "matplotlib~=3.9",
    "pillow~=10.4",
]

types = [
    "pandas-stubs>=2.0",
    "pyarrow-stubs>=20.0.0.20250715",  # https://github.com/apache/arrow/discussions/45919
    "types-requests===2.31.0.1",
]

[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "aws_xray_sdk.*",
    "boto3.*",
    "botocore.*",
    "cookiecutter.*",
    "cron_converter.*",
    "cryptography.*",
    "dateutil.*",
    "docker.*",
    "fsspec.*",
    "jose.*",
    "markdown",
    "nanoid",
    "numpy.*",
    "pandas.*",
    "pyarrow.*",   # https://github.com/apache/arrow/discussions/45919
    "pluggy",
    "stumpy.*",
    "testcontainers.*",  # https://github.com/testcontainers/testcontainers-python/issues/305
    "tqdm.*",
    "wrapt",
    "yaml"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = [
    ".mypy_cache",
    ".git",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "**/antlrgen/**",
    "build",
    "dist",
    "docs",
    "vendor",
    "venv",
]

[tool.ruff.format]
# Use Black-compatible formatting
docstring-code-format = true

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings, I = isort
select = ["E", "F", "W", "I"]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
]

[tool.ruff.lint.per-file-ignores]
"test_app_config.py" = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "executor_sidecar",
    "image_management_service",
    "invocation_scheduling_service",
    "ops_observer",
    "roboto",
    "roboql",
    "roboto_internal",
    "roboto_service",
    "roboto_integ",
]
