[project]
name = "roboto_platform_tools"
dependencies = [
    "ruff>=0.8.0",
    "mypy==1.15",
    "pytest~=7.3",
    "pytest-cov~=4.1",
    "pytest-xdist~=3.3",
    "PyGithub~=2.6.1",
    "testcontainers[postgres]>=4.13.0",
]

[project.optional-dependencies]
sdk_examples = [
    "ipython~=8.28",
    "jupyter~=1.1",
    "matplotlib~=3.9",
    "pillow~=10.4",
]

types = [
    "pandas-stubs>=2.0",
    "pyarrow-stubs>=20.0.0.20250715",  # https://github.com/apache/arrow/discussions/45919
    "types-requests===2.31.0.1",
]

[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "aws_xray_sdk.*",
    "boto3.*",
    "botocore.*",
    "cookiecutter.*",
    "cron_converter.*",
    "cryptography.*",
    "dateutil.*",
    "docker.*",
    "fsspec.*",
    "jose.*",
    "markdown",
    "nanoid",
    "numpy.*",
    "pandas.*",
    "pyarrow.*",   # https://github.com/apache/arrow/discussions/45919
    "pluggy",
    "stumpy.*",
    "testcontainers.*",  # https://github.com/testcontainers/testcontainers-python/issues/305
    "tqdm.*",
    "wrapt",
    "yaml"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = [
    ".mypy_cache",
    ".git",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "**/antlrgen/**",
    "build",
    "dist",
    "docs",
    "vendor",
    "venv",
]

[tool.ruff.format]
# Use Black-compatible formatting
docstring-code-format = true

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, W = pycodestyle warnings, I = isort, S = security
select = ["E", "F", "W", "I", "S"]
ignore = [
    "E203", # whitespace before ':' (conflicts with black)
    "S110", # Allow the try/catch/pass shorthand -- the pass already means we know what we're doing.
    "S311", # Allow the uses of random.random(). Not appropriate for cryptography, but that's not how we use it.
]

[tool.ruff.lint.per-file-ignores]
"test_app_config.py" = ["E501"]


"packages/roboto/src/roboto/http/constants.py" = ["S105"] # This file is token names, not token values.
"packages/roboto/src/roboto/cli/images/*.py" = ["S603"] # We trust the arbitrary shell commands in these files.
"packages/roboto/src/roboto/cli/actions/invoke/docker_action_runner.py" = ["S603"] # We trust the arbitrary shell commands in these files.

"**/test/**/*.py" = [
    "S101", # Asserts allowed in all test code, including test helper scripts.
]
"**/test/**/test_*.py" = [
    "S105", # We can pass plaintext fake passwords in test code.
    "S106", # We can pass plaintext fake passwords in test code.
]
"packages/roboto_integ/src/**/*.py" = [
    "S101", # Integration test infrastructure uses assert for test verification.
]
"build-support/src/**/*_test.py" = [
    "S101", # Asserts allowed in test files.
]
"**/test/**/helpers.py" = [
    "S112", # Allow try-except-continue in test helper code.
]

"build-support/src/roboto_build/**/*.py" = [
    "S603", # We trust the subprocess calls in our build tooling.
    "S606", # We trust the subprocess calls in our build tooling.
    "S607", # We trust the partial executable paths in our build tooling.
]

"scripts/**/*.py" = [
    "S105", # Secret name constants are not hardcoded secrets.
]

"packages/roboto_service/src/roboto_service/ai/tools/analyze_topic*.py" = [
    "S108", # TODO(ENG-2085): tmp files could leave data behind on disk to be accessed by future callers to the same instance.
    "S608", # TODO(ENG-2086): avoid sql injection
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "executor_sidecar",
    "image_management_service",
    "invocation_scheduling_service",
    "ops_observer",
    "roboto",
    "roboql",
    "roboto_internal",
    "roboto_service",
    "roboto_integ",
]
